# jquants-algo-python

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
jquants_algo/: algo.py
tests/: 6273-2023-11-13.csv  6273-2023-11-14.csv  7203-2023-11-13.csv  7203-2023-11-14.csv  7203-performance.csv  __init__.py  performance.csv  test_algo.py
